--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -5,6 +5,7 @@
     min-height: 80vh;
     background-image: url('..//images/hero_desktop.jpeg');
     text-align: center;
+    background-size: cover;
 
     &__content {
         max-width:640px;// equivale a div dentro do section, ou seja, o elemento filho 
@@ -20,6 +21,10 @@
 
         p{
             margin-bottom: 20px;
+
+            &:last-child{
+               margin-top: 60px;
+            }
         }
 
         &__combos{
@@ -28,12 +33,12 @@
 
             &__combo{
                 width:calc(50% - 12px) ;
-
+                
                 img{
                     max-height: 60px;
                 }
 
-                botton{
+                button{
                     display: block;
                     width: 100%;
                     height: 60px;
