--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,28 @@
 @use 'variable';
 @use './hero';
 
+//importar fonts 
+@font-face{
+    font-family: Avenir;//nome da fonte 
+    src:url(../../assets/fonts/Avenir-Bold.woff2);
+    font-weight: 400;
+}
+@font-face{
+    font-family: Avenir;//nome da fonte 
+    src:url(../../assets/fonts/Avenir-Regular.woff2);
+    font-weight: 700;
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+     border: none;
 }
 
 
 body{
     background-color:variable.$corDeFundo;
+    font-family: Avenir,sans-serif;
 }
 
 @mixin text($fontSize:16px){
