ajuste para mobile

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,4 +1,9 @@
 $corDeFundo:#040714;
 $corTextPrincipal: silver;
 $corTextSecundario:#f9f9f9;
+$corDeFundoBotaoPrimario:#6421ff;
+$corDeFundoBotaoSecundari:#0063e5;
+$corDeFundoBotaoDark:#000;
+
+
 //$corTextSecundario:#959559;
